@@ -81,7 +81,8 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
             "browserTarget": "clarin-angular:build",
-	    "proxyConfig": "src/proxy.conf.json"
+	    "proxyConfig": "src/proxy.conf.json",
+	    "ssl": true
           },
           "configurations": {
             "production": {
