@@ -38,14 +38,16 @@ export class LoginComponent implements OnInit {
   }
 
   login() {
+    // console.error("LoginComponent: login(): username:", this.username.value,
+    //               ", remember:", this.rememberMe.value);
     this.auth
-      // This service is in src/ng-matero/core/authentication/auth.service.ts
+      // This service is in src/ng-matero/core/authentication/auth.service.ts (@core)
       .login(this.username.value, this.password.value, this.rememberMe.value)
-      //.pipe(filter(authenticated => authenticated))
+      .pipe(filter(authenticated => authenticated))
       .subscribe(
         () => {
-          this.router.navigateByUrl('/');
-	},
+          this.router.navigateByUrl('/app');
+        },
         (error: HttpErrorResponse) => {
           if (error.status === 422) {
             const form = this.loginForm;
