@@ -3,7 +3,7 @@ import { BehaviorSubject, iif, of } from 'rxjs';
 import { HttpClient } from '@angular/common/http';
 import { map, share, switchMap, tap } from 'rxjs/operators';
 import { TokenService } from './token.service';
-import { Token, BackendUser, User } from './interface';
+import { Token, BackendUser, LoginData, User } from './interface';
 import { admin, guest } from './user';
 import { MainComponent } from '@components/views/main/main.component';
 import { UserService } from 'src/app/services/user-service/user.service';
@@ -16,6 +16,8 @@ export class AuthService {
 
   // private userReq$ = this.http.get<User>('/me');
   private userReq$ = of(admin);
+
+  headers;
 
   constructor(private http: HttpClient, private token: TokenService) {
     this.token
@@ -31,16 +33,16 @@ export class AuthService {
     return this.token.valid();
   }
 
-  login(email: string, password: string, rememberMe = false) {
-    const _token = { access_token: 'MW56YjMyOUAxNjMuY29tWm9uZ2Jpbg==', token_type: 'bearer' };
-    return of(_token).pipe(
-      tap(token => this.token.set(token)),
-      map(() => this.check())
-    );
+  login(email: string, password: string, rememberMe:boolean = false) {
+    // Ensure we have a valid CSRF token...
+    this.http.get('api/auth/gettoken');
     return this.http
-     .post<BackendUser>('/api/auth/login', { email, password, remember_me: rememberMe })
+     .post<LoginData>('/api/auth/login', { email, password, remember_me: rememberMe })
      .pipe(
-       tap(user => this.token.set({ access_token: user.jwtToken, token_type: 'bearer' })),
+       tap(data => {
+         // console.error("AuthService: login(): user", data);
+         this.token.set({ access_token: data.data.jwtToken, token_type: 'bearer' });
+       }),
        map(() => this.check())
      );
     // return this.http
@@ -57,14 +59,14 @@ export class AuthService {
   }
 
   logout() {
-    // return this.http.post('/auth/logout', {}).pipe(
-    //   tap(() => this.token.clear()),
-    //   map(() => !this.check())
-    // );
-    return of({}).pipe(
+    return this.http.post('/api/auth/logout', {}).pipe(
       tap(() => this.token.clear()),
       map(() => !this.check())
     );
+    // return of({}).pipe(
+    //   tap(() => this.token.clear()),
+    //   map(() => !this.check())
+    // );
   }
 
   user() {
