@@ -3,10 +3,10 @@ import { SharedModule } from '@shared/shared.module';
 import { RoutesRoutingModule } from './routes-routing.module';
 
 import { DashboardComponent } from './dashboard/dashboard.component';
-import { LoginComponent } from './sessions/login/login.component';
-import { RegisterComponent } from './sessions/register/register.component';
+//import { LoginComponent } from './sessions/login/login.component';
+//import { RegisterComponent } from './sessions/register/register.component';
 
-const COMPONENTS = [DashboardComponent, LoginComponent, RegisterComponent];
+const COMPONENTS = [DashboardComponent/*, LoginComponent, RegisterComponent*/];
 const COMPONENTS_DYNAMIC = [];
 
 @NgModule({
